--- a/css/style.css
+++ b/css/style.css
@@ -1,460 +1,42 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Open+Sans;
+/* Reset */
+*{
+    margin: 0px;
+    padding: 0px;
 }
-/* HEADER */
-.header{
-    background-color: #fff;
-    height: auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;    
 
+/* Variables */
+:root {
+    --lav-light:var(--lav-light): #fffff;
+    --lav: #fffff;
 }
+
+
+/* Tipografía general */
+body {
+   font-family: open+sans;
+}
+
+/* HEADER */
 
 .header-logo{
-    width:30rem;
+    width:20rem;
+    max-width: 100%;
     height:auto;
     text-align:center;
 
 }
 
-.header li{
-    display: inline-block;
-    
-
-}
-/* CONTENIDO HOME */
-
-.main-grid{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1frx;  
-    grid-template-areas: "slider-section"
-                            "cursos"
-                            "profesores";
-
-}
-
-/* Seccion Slider */
-
-.slider-section{
-    grid-area: slider-section;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    width: 100%;
-    margin-top: 10px 5px 5px 10px;
-
-}
-
-.slider-section img{
-    max-width: 100%;
-    height: auto;
-  }
-
-
-.title-slider{
-    grid-area: title-slider;
-    text-align: center;
-    margin: auto;
-    padding-top: 40px;
-}
-
-.visto{
-    text-align: center;
-   padding: 20px 0px 0px 0px;
-}
-
-/* Seccion Cursos */
-
-.cursos{
-    grid-area: cursos;
-    padding-bottom: 2rem;
-
-}
-
-.cursos-grid{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 50px 20px 1fr 1fr 100px;
-    grid-template-areas: "title-cursos title-cursos title-cursos"
-                            "subtitle-cursos subtitle-cursos subtitle-cursos"
-                            "curso1 curso2 curso3"
-                            "curso4 curso5 curso6"
-                            "btn-cursos btn-cursos btn-cursos";
-    row-gap: 2rem;
-                        }
-
-.btn-cursos{
-    grid-area: btn-cursos;
-    width: 140px;
-    height: 41px;
-    border-radius: 20px;
-    margin-top: 2rem;
-    background-color: #f34f36;
-    justify-self: center;
-    border: none;
-}
-
-.curso{
-    background-color: #fff;
-    color: #00506b;
-    width: 90%;
-    height: 300px;
-    margin: auto;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid #bbbbbb;
-    border-radius: 20px;
-    transition: height 12s, width 1s, transform;
-
-}
-
-.title-cursos{
-    grid-area: title-cursos;
-    text-align: center;
-    margin: auto;
-    padding-top: 40px;
-
-}
-
-.subtitle-cursos{
-    grid-area: subtitle-cursos;
-    text-align: center;
-    font-size: 16px;
-    margin-bottom : auto;
-}
-
-.curso1{
-    grid-area: curso1;
-}
-
-.curso2{
-    grid-area: curso2;
-}
-
-.curso3{
-    grid-area: curso3;
-}
-
-.curso4{
-    grid-area: curso4;
-}
-
-.curso5{
-    grid-area: curso5;
-}
-
-.curso6{
-    grid-area: curso6;
-}
-
-
-/* Seccion Profesores */
-
-.profesores{
-    grid-area: profesores;
-    padding-bottom: 2rem;
-
-}
-
-.profesores-grid{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 300px 1fr;
-    grid-template-areas: "profesor1 profesor2 profesor3 profesor4 profesor5 profesor6"
-                            "btn-profesor btn-profesor btn-profesor btn-profesor btn-profesor btn-profesor";
-    row-gap: 2rem;
-                        }
-
-.btn-profesor{
-    grid-area: btn-profesor;
-    width: 140px;
-    height: 41px;
-    border-radius: 20px;
-    margin-top: 2rem;
-    background-color: #f34f36;
-    justify-self: center;
-    border: none;
-}
-
-.profesor{
-    background-color: #fff;
-    color: #00506b;
-    width: 70%;
-    height: 300px;
-    margin: auto;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid #bbbbbb;
-    border-radius: 20px;
-
-    ;
-}
-
-.profesor1{
-    grid-area: profesor1;
-}
-
-.profesor2{
-    grid-area: profesor2;
-}
-
-.profesor3{
-    grid-area: profesor3;
-}
-
-.profesor4{
-    grid-area: profesor4;
-}
-
-.profesor5{
-    grid-area: profesor5;
-}
-
-.profesor6{
-    grid-area: profesor6;
-}
-
-/* CONTENIDO NOSOTROS */
-
-.main-grid-nosotros{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;  
-    grid-template-areas: "reviews"
-                            "faqs";
-
-}
-
-/* Seccion Reviews */
-
-
-.reviews{
-    grid-area: reviews;
-    padding-top: auto;
-    padding-bottom: auto;
-}
-
-
-.reviews-grid{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 50px 1fr;
-    grid-template-areas: "title-reviews title-reviews title-reviews"
-                            "review1 review2 review3";
-                        }
-
-
-
-.review{
-    background-color: #fff;
-    color: #00506b;
-    width: 90%;
-    height: 350px;
-    margin: auto;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid #bbbbbb;
-    border-radius: 20px;
-
-
-}
-
-.title-reviews{
-    grid-area: title-reviews;
-    text-align: center;
-    margin: auto;
-    padding-top: auto;
-
-}
-
-.review1{
-    grid-area: review1;
-
-}
-
-.review2{
-    grid-area: review2;
-
-}
-
-.review3{
-    grid-area: review3;
-
-}
-
-
-/* Seccion FAQs */
-
-.faqs{
-    grid-area: faqs;
-    padding-bottom: 2rem;
-}
-
-
-.faqs-grid{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    grid-template-areas: "title-faqs"
-                            "faq1"
-                            "faq2"
-                            "faq3";
-}
-
-
-
-.faq{
-    background-color: #fff;
-    color: #00506b;
-    width: 90%;
-    margin: auto;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: 0px solid #bbbbbb;
-    border-radius: 20px;
-
-
-}
-
-.title-faqs{
-    grid-area: title-faqs;
-    text-align: center;
-    margin: auto;
-    padding-top: 10px;
-
-}
-
-.faq1{
-    grid-area: faq1;
-
-}
-
-.faq2{
-    grid-area: faq2;
-
-}
-
-.faq3{
-    grid-area: faq3;
-
-}
-
-
-
 /* FOOTER */
 
-
 .footer{
-    background-color: #fff;
     text-align: center;
 }
 .footer-logo{
-    width:40rem;
+    width:20rem;
     height:auto;
     text-align:center;
 }
 .icon{
     text-align: center;
-
-}
-
-
-/* CONTENIDO TABLET */
-
-@media only screen and (max-width: 1024px){
-
-    .cursos-grid{
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 50px 20px 1fr 1fr 1fr 100px;
-        grid-template-areas: "title-cursos title-cursos"
-                                "subtitle-cursos subtitle-cursos"
-                                "curso1 curso2"
-                                "curso3 curso4"
-                                "curso5 curso6"
-                                "btn-cursos btn-cursos";
-    
-                            }
-    
-    .profesores-grid{
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 300px 300px 1fr;
-        grid-template-areas: "profesor1 profesor2 profesor3"
-                                "profesor4 profesor5 profesor6"
-                                "btn-profesor btn-profesor btn-profesor";
-      
-                            }
-
-
-                        }
-
-/* CONTENIDO MOBILE */
-
-@media only screen and (max-width: 500px){
-
-    .cursos-grid{
-        grid-template-columns: 1fr;
-        grid-template-rows: 50px 20px 1fr 1fr 1fr 1fr 1fr 1fr 100px;
-        grid-template-areas: "title-cursos"
-                                "subtitle-cursos"
-                                "curso1"
-                                "curso2"
-                                "curso3"
-                                "curso4"
-                                "curso5"
-                                "curso6"
-                                "btn-cursos";
-    
-                            }
-    
-
-    .profesores-grid{
-        grid-template-columns: 1fr;
-        grid-template-rows: 300px 300px 300px 300px 300px 300px 1fr;
-        grid-template-areas: "profesor1"
-                                "profesor2" 
-                                "profesor3"
-                                "profesor4" 
-                                "profesor5" 
-                                "profesor6"
-                                "btn-profesor";
-      
-                            }
-    .reviews-grid{
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 50px 1fr 1fr 1fr;
-        grid-template-areas: "title-reviews"
-                            "review1"
-                            "review2"
-                            "review3";
-                        
-                            }
-   
-
-                        }
-
-/* ANIMACIONES Y GRADIENTES */
-
-.body {
-    background-image: radial-gradient(cicle, #875949, #898399);
 
 }
